--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <record id="estate_property_view_form" model="ir.ui.view">
@@ -6,9 +7,9 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <!--                    <button name="action_sold" type="object" string="Sold" states="new,offer_received"/>-->
-                    <!--                    <button name="action_sold" type="object" string="Sold" states="offer_accepted" class="oe_highlight"/>-->
-                    <!--                    <button name="action_cancel" type="object" string="Cancel" states="new,offer_received,offer_accepted"/>-->
+                    <button name="action_sold" type="object" string="Sold" states="new,offer_received" class="btn btn-dark"/>
+                    <button name="action_sold" type="object" string="Sold" states="offer_accepted" class="oe_highlight"/>
+                    <button name="action_cancel" type="object" string="Cancel" states="new,offer_received,offer_accepted"/>
                     <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold"/>
                 </header>
                 <sheet>
@@ -16,17 +17,17 @@
                         <h1>
                             <field name="name"/>
                         </h1>
-                        <!--                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>-->
+                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                     </div>
                     <group>
                         <group>
-                            <!--                            <field name="property_type_id" options="{'no_create': True, 'no_edit': True}"/>-->
+                            <field name="property_type_id" options="{'no_create': True, 'no_edit': True}"/>
                             <field name="postcode"/>
                             <field name="date_availability"/>
                         </group>
                         <group>
                             <field name="expected_price"/>
-                            <!--                            <field name="best_price"/>-->
+                            <field name="best_price"/>
                             <field name="selling_price"/>
                         </group>
                     </group>
@@ -42,44 +43,43 @@
                                     <field name="garden"/>
                                     <field name="garden_area" attrs="{'invisible': [('garden', '=', False)]}"/>
                                     <field name="garden_orientation" attrs="{'invisible': [('garden', '=', False)]}"/>
-                                    <!--                                    <field name="total_area"/>-->
+                                    <field name="total_area"/>
                                 </group>
                             </group>
                         </page>
                         <page string="Offers">
-                            <!--                            <field name="offer_ids" attrs="{'readonly': [('state', 'in', ('offer_accepted', 'sold', 'canceled'))]}"/>-->
+                            <field name="offer_ids" attrs="{'readonly': [('state', 'in', ('offer_accepted', 'sold', 'canceled'))]}"/>
+
+
                         </page>
                         <page string="Other Info">
                             <group>
                                 <group>
-                                    <!--                                    <field name="user_id"/>-->
-                                    <!--                                    <field name="buyer_id"/>-->
+                                    <field name="user_id"/>
+                                    <field name="buyer_id"/>
                                 </group>
                             </group>
                         </page>
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
-                    <field name="message_follower_ids"/>
-                    <field name="activity_ids"/>
-                    <field name="message_ids"/>
-                </div>
-
+                        <field name="message_follower_ids"/>
+                        <field name="activity_ids"/>
+                        <field name="message_ids"/>
+                    </div>
             </form>
         </field>
     </record>
-
 
     <record id="estate_property_view_tree" model="ir.ui.view">
         <field name="name">estate.property.tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
-            <tree string="Properties" decoration-success="state in ('offer_received', 'offer_accepted')"
-                  decoration-muted="state == 'sold'" decoration-bf="state == 'offer_accepted'">
+            <tree string="Properties" decoration-success="state in ('offer_received', 'offer_accepted')" decoration-muted="state == 'sold'" decoration-bf="state == 'offer_accepted'">
                 <field name="name"/>
-<!--                <field name="property_type_id"/>-->
+                <field name="property_type_id"/>
                 <field name="postcode"/>
-<!--                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>-->
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                 <field name="bedrooms"/>
                 <field name="living_area"/>
                 <field name="expected_price"/>
@@ -90,13 +90,64 @@
         </field>
     </record>
 
+    <record id="estate_property_view_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="name"/>
+                <field name="property_type_id"/>
+                <field name="postcode"/>
+                <field name="expected_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area" filter_domain="[('living_area', '>=', self)]"/>
+                <field name="facades"/>
+                <field name="garage"/>
+                <field name="garden"/>
+                <filter string="Available" name="available" domain="[('state', 'in', ('new', 'offer_received'))]"/>
+                <group expand="1" string="Group By">
+                    <filter string="Postcode" name='postcode' context="{'group_by':'postcode'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
 
+    <record id="estate_property_view_kanban" model="ir.ui.view">
+        <field name="name">estate.property.kanban</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="property_type_id" records_draggable="0">
+                <field name="state"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div>
+                                <strong class="o_kanban_record_title">
+                                    <field name="name"/>
+                                </strong>
+                            </div>
+                            <div>
+                                Expected Price: <field name="expected_price"/>
+                            </div>
+                            <div t-if="record.state.raw_value == 'offer_received'">
+                                Best Offer: <field name="best_price"/>
+                            </div>
+                            <div t-if="record.selling_price.raw_value">
+                                Selling Price: <field name="selling_price"/>
+                            </div>
+                            <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
 
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
-<!--        <field name="context">{'search_default_available': 1}</field>-->
+        <field name="view_mode">tree,kanban,form</field>
+        <field name="context">{'search_default_available': 1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create a property advertisement
@@ -106,5 +157,4 @@
             </p>
         </field>
     </record>
-
 </odoo>
